--- a/Objects/FRBB.build_log.htm
+++ b/Objects/FRBB.build_log.htm
@@ -22,18 +22,31 @@ Dialog DLL:      TCM.DLL V1.42.0.0
  
 <h2>Project:</h2>
 C:\Users\treez\Documents\Github\FRBB\FRBB.uvprojx
-Project File Date:  01/15/2021
+Project File Date:  01/16/2021
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.14', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Rebuild target 'Target 1'
-assembling startup_stm32f10x_hd.s...
-linking...
-.\Objects\FRBB.axf: Error: L6218E: Undefined symbol main (referred from __rtentry2.o).
-Not enough information to list image symbols.
-Not enough information to list load addresses in the image map.
-Finished: 2 information, 0 warning and 1 error messages.
-".\Objects\FRBB.axf" - 1 Error(s), 0 Warning(s).
+Rebuild target 'SYSTEM'
+SYSTEM/delay/delay.c(1): warning: In file included from...
+SYSTEM/delay/delay.h(3): error: 'sys.h' file not found
+#include "sys.h"  
+         ^~~~~~~
+1 error generated.
+compiling delay.c...
+SYSTEM/sys/sys.c(1): warning: In file included from...
+SYSTEM/sys/sys.h(3): warning: In file included from...
+C:/Users/treez/AppData/Local/Arm/Packs/Keil/STM32F1xx_DFP/2.3.0/Device/Include\stm32f10x.h(106): error: 'RTE_Components.h' file not found
+    #include "RTE_Components.h"
+             ^~~~~~~~~~~~~~~~~~
+1 error generated.
+compiling sys.c...
+SYSTEM/usart/usart.c(1): warning: In file included from...
+SYSTEM/usart/usart.h(3): error: 'sys.h' file not found
+#include "sys.h"
+         ^~~~~~~
+1 error generated.
+compiling usart.c...
+".\Objects\FRBB.axf" - 3 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -43,7 +56,7 @@ Package Vendor: Keil
                 STMicroelectronics STM32F1 Series Device Support, Drivers and Examples
 
 <h2>Collection of Component include folders:</h2>
-  .\RTE\_Target_1
+  .\RTE\_SYSTEM
   C:\Users\treez\AppData\Local\Arm\Packs\Keil\STM32F1xx_DFP\2.3.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
