--- a/Objects/FRBB.build_log.htm
+++ b/Objects/FRBB.build_log.htm
@@ -16,23 +16,28 @@ Linker/Locator:  ArmLink.exe V6.14
 Library Manager: ArmAr.exe V6.14
 Hex Converter:   FromElf.exe V6.14
 CPU DLL:         SARMCM3.DLL V5.30.0.0
-Dialog DLL:      DCM.DLL V1.17.3.0
-Target DLL:      UL2CM3.DLL V1.163.3.0
-Dialog DLL:      TCM.DLL V1.42.0.0
+Dialog DLL:      DARMSTM.DLL V1.68.0.0
+Target DLL:      Segger\JL2CM3.dll V2.99.38.0
+Dialog DLL:      TARMSTM.DLL V1.66.0.0
  
 <h2>Project:</h2>
 C:\Users\treez\Documents\Github\FRBB\FRBB.uvprojx
-Project File Date:  01/18/2021
+Project File Date:  01/20/2021
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.14', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Rebuild target 'SYSTEM'
+Rebuild target 'Target 1'
 SYSTEM/delay/delay.c(1): warning: In file included from...
 SYSTEM/delay/delay.h(3): error: 'sys.h' file not found
 #include "sys.h"
          ^~~~~~~
 1 error generated.
 compiling delay.c...
+USER/test.cpp(1): error: 'sys.h' file not found
+#include "sys.h"
+         ^~~~~~~
+1 error generated.
+compiling test.cpp...
 SYSTEM/sys/sys.c(1): warning: In file included from...
 SYSTEM/sys/sys.h(4): warning: In file included from...
 C:/Users/treez/AppData/Local/Arm/Packs/Keil/STM32F1xx_DFP/2.3.0/Device/Include\stm32f10x.h(106): error: 'RTE_Components.h' file not found
@@ -46,7 +51,7 @@ SYSTEM/usart/usart.h(3): error: 'sys.h' file not found
          ^~~~~~~
 1 error generated.
 compiling usart.c...
-".\Objects\FRBB.axf" - 3 Error(s), 0 Warning(s).
+".\Objects\FRBB.axf" - 4 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -56,7 +61,7 @@ Package Vendor: Keil
                 STMicroelectronics STM32F1 Series Device Support, Drivers and Examples
 
 <h2>Collection of Component include folders:</h2>
-  .\RTE\_SYSTEM
+  .\RTE\_Target_1
   C:\Users\treez\AppData\Local\Arm\Packs\Keil\STM32F1xx_DFP\2.3.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
